💐 Make The Towers compile on 1.19.4